// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageNotFound displays PageNotFound when the user is authenticated 1`] = `
<div>
  <h1>
    Page not found!
  </h1>
  <h2>
    Sorry but the page you are looking for was not found.
  </h2>
  <a>
    Return to the home page
  </a>
</div>
`;

exports[`PageNotFound displays UnknownError when an error occurs validating authentication 1`] = `
<div>
  <h1>
    Something went wrong!
  </h1>
  <h2>
    We are currently unable to render this page.
  </h2>
  <p>
    Please check your connection and try to  
    <button
      style="background-color: transparent; cursor: pointer; display: inline; margin: 0px; padding: 0px; color: rgb(0, 123, 255); text-decoration: none;"
    >
      refresh the page
    </button>
  </p>
</div>
`;

exports[`PageNotFound renders the Loading component when fetch request is pending 1`] = `
<div>
  <div
    style="display: flex; justify-content: center; align-items: center;"
  >
    <div
      class="spinner-border"
      role="status"
      style="width: 100px; height: 100px; position: absolute; top: 50%;"
    >
      <span
        class="sr-only"
      >
        Loading...
      </span>
    </div>
  </div>
</div>
`;
